yaml/hello-spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-spring-deployment
  labels:
    app: hello-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-spring
  template:
    metadata:
      labels:
        app: hello-spring
    spec:
      containers:
      - name: hello-spring
        image: iamjiggy/hello-spring:latest
        ports:
        - containerPort: 8080
