yaml/hello-spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-svc
spec:
  selector:
    app: hello-spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
